--- a/DirectX12CG/DirectX12CG.vcxproj
+++ b/DirectX12CG/DirectX12CG.vcxproj
@@ -11,7 +11,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Engin\Model\AnimationMesh.cpp" />
     <ClCompile Include="Engin\Util\App.cpp" />
     <ClCompile Include="Engin\Collide\CollisionManager.cpp" />
     <ClCompile Include="Engin\Collide\BoxCollider.cpp" />
@@ -29,7 +28,8 @@
     <ClCompile Include="Engin\DirectX\Draw.cpp" />
     <ClCompile Include="Engin\DirectX\Dx12.cpp" />
     <ClCompile Include="Engin\DirectX\DxWindow.cpp" />
-    <ClCompile Include="Engin\Model\AnimatoinModel.cpp" />
+    <ClCompile Include="Engin\Model\FBXLoader.cpp" />
+    <ClCompile Include="Engin\Model\FBXModel.cpp" />
     <ClCompile Include="Engin\Util\FPS.cpp" />
     <ClCompile Include="Engin\DirectX\GamePad.cpp" />
     <ClCompile Include="Engin\Camera\ICamera.cpp" />
@@ -84,8 +84,7 @@
     <ClCompile Include="Engin\Collide\RayCastHit.cpp" />
     <ClCompile Include="Engin\Collide\MeshCollider.cpp" />
     <ClCompile Include="App\Player.cpp" />
-    <ClCompile Include="Engin\Model\ModelManager.cpp" />
-    <ClCompile Include="Engin\Util\Query.cpp" />
+    <ClCompile Include="Query.cpp" />
     <ClCompile Include="Engin\Sprite\PostEffect.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -169,8 +168,6 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Engin\Model\AnimationMesh.h" />
-    <ClInclude Include="Engin\Model\AnimationModel.h" />
     <ClInclude Include="Engin\Util\App.h" />
     <ClInclude Include="Engin\Collide\CollisionManager.h" />
     <ClInclude Include="Engin\Collide\BoxCollider.h" />
@@ -185,6 +182,8 @@
     <ClInclude Include="Engin\DirectX\Draw.h" />
     <ClInclude Include="Engin\DirectX\Dx12.h" />
     <ClInclude Include="Engin\DirectX\DxWindow.h" />
+    <ClInclude Include="Engin\Model\FBXLoader.h" />
+    <ClInclude Include="Engin\Model\FBXModel.h" />
     <ClInclude Include="Engin\Util\FPS.h" />
     <ClInclude Include="Engin\DirectX\GamePad.h" />
     <ClInclude Include="Engin\Camera\ICamera.h" />
@@ -237,8 +236,7 @@
     <ClInclude Include="Engin\Collide\RayCastHit.h" />
     <ClInclude Include="Engin\Collide\MeshCollider.h" />
     <ClInclude Include="App\Player.h" />
-    <ClInclude Include="Engin\Model\ModelManager.h" />
-    <ClInclude Include="Engin\Util\Query.h" />
+    <ClInclude Include="Query.h" />
     <ClInclude Include="Engin\Sprite\PostEffect.h" />
   </ItemGroup>
   <ItemGroup>
