--- a/DirectX12CG/DirectX12CG.vcxproj.filters
+++ b/DirectX12CG/DirectX12CG.vcxproj.filters
@@ -300,7 +300,10 @@
     <ClCompile Include="App\Scene\TitleScene.cpp">
       <Filter>ソース ファイル\Scene</Filter>
     </ClCompile>
-    <ClCompile Include="Engin\Model\AnimatoinModel.cpp">
+    <ClCompile Include="Engin\Model\FBXLoader.cpp">
+      <Filter>ソース ファイル\Engin\Model</Filter>
+    </ClCompile>
+    <ClCompile Include="Engin\Model\FBXModel.cpp">
       <Filter>ソース ファイル\Engin\Model</Filter>
     </ClCompile>
     <ClCompile Include="Engin\DirectX\GamePad.cpp">
@@ -372,7 +375,7 @@
     <ClCompile Include="Engin\Pipeline\Depth.cpp">
       <Filter>ソース ファイル\Engin\Pipeline</Filter>
     </ClCompile>
-    <ClCompile Include="Engin\Util\Query.cpp">
+    <ClCompile Include="Query.cpp">
       <Filter>ソース ファイル\Engin\Collider</Filter>
     </ClCompile>
     <ClCompile Include="Engin\Util\App.cpp">
@@ -380,12 +383,6 @@
     </ClCompile>
     <ClCompile Include="App\Player.cpp">
       <Filter>ソース ファイル\Game</Filter>
-    </ClCompile>
-    <ClCompile Include="Engin\Model\ModelManager.cpp">
-      <Filter>ソース ファイル\Engin\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="Engin\Model\AnimationMesh.cpp">
-      <Filter>ソース ファイル\Engin\Model</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -550,6 +547,12 @@
     <ClInclude Include="App\Scene\TitleScene.h">
       <Filter>ヘッダー ファイル\Scene</Filter>
     </ClInclude>
+    <ClInclude Include="Engin\Model\FBXModel.h">
+      <Filter>ヘッダー ファイル\Engin\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Engin\Model\FBXLoader.h">
+      <Filter>ヘッダー ファイル\Engin\Model</Filter>
+    </ClInclude>
     <ClInclude Include="Engin\DirectX\GamePad.h">
       <Filter>ヘッダー ファイル\Engin\Input</Filter>
     </ClInclude>
@@ -622,7 +625,7 @@
     <ClInclude Include="Engin\Pipeline\Depth.h">
       <Filter>ヘッダー ファイル\Engin\Pipeline</Filter>
     </ClInclude>
-    <ClInclude Include="Engin\Util\Query.h">
+    <ClInclude Include="Query.h">
       <Filter>ヘッダー ファイル\Engin\Collider</Filter>
     </ClInclude>
     <ClInclude Include="App\Player.h">
@@ -633,15 +636,6 @@
     </ClInclude>
     <ClInclude Include="Engin\Util\resource.h">
       <Filter>ヘッダー ファイル\Engin\Util</Filter>
-    </ClInclude>
-    <ClInclude Include="Engin\Model\ModelManager.h">
-      <Filter>ヘッダー ファイル\Engin\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="Engin\Model\AnimationMesh.h">
-      <Filter>ヘッダー ファイル\Engin\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="Engin\Model\AnimationModel.h">
-      <Filter>ヘッダー ファイル\Engin\Model</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
